  (Thomas Refis, review by Gabriel Scherer)

### Code generation and optimizations:

- MPR#7725, GPR#1754: improve AFL instrumentation for objects and lazy values
  (Stephen Dolan)

- GPR#1631: AMD64 code generator: emit shorter instruction sequences for the
  sign-extension operations
  (LemonBoy, review by Alain Frisch and Xavier Leroy)

### Runtime system:

- GPR#1793: add the -m and -M command-line options to ocamlrun
  (Sébastien Hinderer, review by Xavier Clerc and Damien Doligez)

- GPR#1723: Remove internal Meta.static_{alloc,free} primitives.
  (Stephen Dolan, review by Gabriel Scherer)

### Tools:

- GPR#1711: the new 'open' flag in OCAMLRUNPARAM takes a comma-separated list of
  modules to open as if they had been passed via the command line -open flag.
  (Nicolás Ojeda Bär, review by Mark Shinwell)

### Manual and documentation:

- GPR#1788: move the quoted string description to the main chapters
  (Florian Angeletti, review by Xavier Clerc and Perry E. Metzger)

### Compiler distribution build system:

- GPR#1776: add -no-install-bytecode-programs and related configure options to
  control (non-)installation of ".byte" executables
  (Mark Shinwell, review by Sébastien Hinderer and Gabriel Scherer)

- GPR#1777: add -no-install-source-artifacts and related configure options to
  control installation of .cmt, .cmti, .mli and .ml files
  (Mark Shinwell, review by Nicolas Ojeda Bar and Sébastien Hinderer)

- GPR#1781: cleanup of the manual's build process
  (steinuil, review by Marcello Seri, Gabriel Scherer and Florian Angeletti)

- GPR#1797: remove the deprecated Makefile.nt files
  (Sébastien Hinderer, review by Nicolas Ojeda Bar)  

### Internal/compiler-libs changes:

- GPR#1745: do not generalize the type of every sub-pattern, only of variables
  (Thomas Refis, review by Leo White)

- GPR#1746: remove unreachable error variant: Make_seltype_nongen
  (Florian Angeletti, review by Gabriel Radanne)

- GPR#1747: type_cases: always propagate