@@ -1,4 +1,5 @@
 array_spec.ml
+comparison_optim.ml
 comparison_table.ml
 module_coercion.ml
 ref_spec.ml
